--- a/Grand.Web/Views/Product/_DeliveryInfo.cshtml
+++ b/Grand.Web/Views/Product/_DeliveryInfo.cshtml
@@ -14,10 +14,10 @@
                 <span class="value">@Model.DeliveryDate</span>
             </div>
         }
-        @*@if (Model.NotReturnable)
+        @if (Model.NotReturnable)
         {
             <div class="d-inline-flex align-items-center w-100"><span class="mdi mdi-truck mr-2"></span> @T("Products.NotReturnable")</div>
-        }*@
+        }
         @if (Model.AdditionalShippingCharge > 0 && !Model.IsFreeShipping)
         {
             <div class="additional-shipping-charge btn btn-sm btn-secondary">
