--- a/Grand.Web/Views/ReturnRequest/ReturnRequestDetails.cshtml
+++ b/Grand.Web/Views/ReturnRequest/ReturnRequestDetails.cshtml
@@ -103,7 +103,7 @@
             {
                 <div class="card">
                     <div class="card-body">
-                        <ul class="billing-info info pl-0">
+                        <ul class="billing-info pl-0">
                             <li class="title">
                                 <h5 class="generalTitle">@T("Account.CustomerReturnRequests.PickupAddress")</h5>
                             </li>
