--- a/Grand.Web/Views/Shared/_DiscountBox.cshtml
+++ b/Grand.Web/Views/Shared/_DiscountBox.cshtml
@@ -5,12 +5,12 @@
     <div class="coupon-box">
         <h2 class="h5">
             <strong>
-                @T("ShoppingCart.DiscountCouponCode")
+                @T("ShoppingCart.DiscountCouponCode.Tooltip")
             </strong>
         </h2>
         <div class="coupon-code">
             <div class="form-group">
-                <span class="col-form-label">@T("ShoppingCart.DiscountCouponCode.Tooltip")</span>
+                <span class="col-form-label">@T("ShoppingCart.DiscountCouponCode")</span>
                 <div class="input-group">
                     <input type="text" id="discountcouponcode" name="discountcouponcode" class="form-control discount-coupon-code">
                     <label for="discountcouponcode" class="sr-only">@T("ShoppingCart.GiftCardCouponCode.Button")</label>
