--- a/Grand.Web/Views/Catalog/_CatalogSelectors.cshtml
+++ b/Grand.Web/Views/Catalog/_CatalogSelectors.cshtml
@@ -1,7 +1,8 @@
 ﻿@model CatalogPagingFilteringModel
 
 <div class="generalMarginSupporter categoryGrid catalog-selectors">
-
+    @*mobile left side trigger*@
+    <a class="js-offcanvas-trigger filter-button btn btn-outline-info d-lg-none d-flex mb-3" data-offcanvas-trigger="leftSide" href="#leftSide"><span class="mdi mdi-tune"></span><span class="ml-3">@T("catalog.selectors.fiters")</span></a>
     <div class="d-flex flex-row row px-3">
         @*sorting*@
         @if (Model.AllowProductSorting)
