--- a/Grand.Web/Views/Order/Details.cshtml
+++ b/Grand.Web/Views/Order/Details.cshtml
@@ -26,11 +26,11 @@
         <div asp-validation-summary="All"></div>
 
         <div class="btn-group btn-group-sm">
-            <a href="@Url.RouteUrl("PrintOrderDetails", new { orderId = Model.Id })" target="_blank" class="btn btn-primary print-order-button">@T("Order.Print")</a>
+            <a href="@Url.RouteUrl("PrintOrderDetails", new { orderId = Model.Id })" target="_blank" class="btn btn-outline-secondary print-order-button">@T("Order.Print")</a>
 
             @if (!Model.PdfInvoiceDisabled)
             {
-                <a href="@Url.RouteUrl("GetOrderPdfInvoice", new { orderId = Model.Id })" class="btn btn-secondary pdf-invoice-button">@T("Order.GetPDFInvoice")</a>
+                <a href="@Url.RouteUrl("GetOrderPdfInvoice", new { orderId = Model.Id })" class="btn btn-outline-secondary pdf-invoice-button">@T("Order.GetPDFInvoice")</a>
             }
 
             @if (Model.ShowAddOrderNote)
@@ -62,7 +62,7 @@
         <div class="card">
             <div class="card-body d-flex flex-row row">
                 <div class="col-sm-6 col-12 billing">
-                    <ul class="billing-info info pl-0">
+                    <ul class="billing-info pl-0">
                         <li class="title">
                             <h5 class="generalTitle">@T("Order.BillingAddress")</h5>
                         </li>
