--- a/Grand.Web/Views/Product/_ReservationInfo.cshtml
+++ b/Grand.Web/Views/Product/_ReservationInfo.cshtml
@@ -6,7 +6,7 @@
     Html.AppendScriptParts(ResourceLocation.Footer, "~/scripts/public.reservation.js");
     Html.AddCssFileParts("~/content/jquery-ui-themes/smoothness/jquery-ui.calendar.min.css");
 }
-    <div>
+    <div style="margin-top:10px">
         @if (Model.Parameters.Any())
         {
             <div class="container" style="margin-left:-15px">
@@ -22,7 +22,9 @@
 
         @if (Model.IntervalUnit == IntervalUnit.Day)
         {
-            <div style="position: relative;" class="reservation-calendar">
+            <div style="position: relative;">
+                <h5>@T("Products.Reservation.Date")</h5>
+
                 <div id="reservationDatepickerRange_@Model.Id">
                     <div id="reservationDatepickerRangeStart_@Model.Id"></div>
                     <div id="reservationDatepickerRangeEnd_@Model.Id"></div>
@@ -73,13 +75,6 @@ else
             var quantitySelector = $('#addtocart_@(Model.Id)_EnteredQuantity');
             var serverDatesFormat = 'MM/DD/YYYY';
             var getDatesForMonthUrl = '@Html.Raw(Url.Action("GetInactiveDatesForMonth", "Product", new { productId = Model.Id, monthOffset = 1, quantity = "PLACEHOLDER_QUANTITY", month = "PLACEHOLDER_MONTH", year = "PLACEHOLDER_YEAR"  }))';
-            var disabledDates = [];
-
-
-            function onBeforeShowDay(d) {
-                var check = disabledDates.indexOf(d.getTime());
-                return check === -1;
-            }
 
             datePickersGroup.bootstrapDatepicker({
                 inputs: [startDatePicker, endDatePicker],
@@ -88,8 +83,7 @@ else
                 clearBtn: true,
                 todayBtn: false,
                 todayHighlight: false,
-                weekStart: 1,
-                beforeShowDay: onBeforeShowDay
+                weekStart: 1
             }).on('changeDate', function (e) {
                 var startDate = startDatePicker.bootstrapDatepicker('getDate');
                 var endDate = endDatePicker.bootstrapDatepicker('getDate');
@@ -105,7 +99,6 @@ else
             startDatePicker.css('display', 'none');
 
             endDatePicker.on('changeMonth', function (e) {
-
                 var d = e.date;
 
                 if (d) {
@@ -124,18 +117,15 @@ else
                         data: {},
                     }).done(function (data) {
 
-                        startDatePicker.find('[data-date]').removeClass('disabled disabled-date');
-                        endDatePicker.find('[data-date]').removeClass('disabled disabled-date');
-
-                        disabledDates = [];
-
                         for (var i = 0; i < data.length; i++) {
-                            var date = moment.utc(data[i], 'YYYY-MM-DD');
-                            var timestamp = date.toDate().getTime();
-                            disabledDates.push(date.subtract('hours', 2).toDate().getTime());
-                            startDatePicker.find('[data-date=' + timestamp + ']').addClass('disabled disabled-date');
-                            endDatePicker.find('[data-date=' + timestamp + ']').addClass('disabled disabled-date');
+                            data[i] = moment.utc(data[i], 'YYYY-MM-DD').toDate();
                         }
+
+                        startDatePicker.bootstrapDatepicker('setDatesDisabled', data);
+                        startDatePicker.bootstrapDatepicker('_setDate', d, 'view');
+
+                        endDatePicker.bootstrapDatepicker('setDatesDisabled', data);
+                        endDatePicker.bootstrapDatepicker('_setDate', d, 'view');
 
                     }).fail(function () {
 
