--- a/Grand.Web/Views/Shared/Components/LanguageSelector/Default.cshtml
+++ b/Grand.Web/Views/Shared/Components/LanguageSelector/Default.cshtml
@@ -4,13 +4,51 @@
 {
     var returnurl = webHelper.GetRawUrl(Context.Request);
 
-    <li class="nav-item dropdown item-languages" id="navbarNavLanguageMenu">
-        <a class="nav-link dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">@Model.AvailableLanguages.First(x => x.Id == Model.CurrentLanguageId).Name</a>
-        <div class="dropdown-menu position-absolute dropdown-menu-right">
-            @foreach (var language in Model.AvailableLanguages.Where(x => x.Id != Model.CurrentLanguageId))
-            {
-                <a class="dropdown-item" href="@Url.RouteUrl("ChangeLanguage", new { langid = language.Id, returnurl })">@language.Name</a>
-            }
+    if (Model.UseImages)
+    {
+        <div class="btn-group language-selector btn-group-sm float-xs-right align-self-center d-block pr-1">
+            <ul class="list-inline language-list pl-0 mb-0 d-flex align-items-center">
+                @foreach (var lang in Model.AvailableLanguages)
+                {
+                    <li class="list-inline-item">
+                        <a  href="@Url.RouteUrl("ChangeLanguage", new {langid = lang.Id, returnurl})" title="@lang.Name">
+                            <img title='@lang.Name' alt='@lang.Name' @(lang.Id == Model.CurrentLanguageId ? " class=selected" : null)
+                                 src="@Url.Content("~/content/images/flags/" + @lang.FlagImageFileName) " />
+                        </a>
+                    </li>
+                }
+            </ul>
         </div>
-    </li>
+    }
+    else
+    {
+        var languages = Model.AvailableLanguages.Select(lang => new SelectListItem
+        {
+            Text = lang.Name,
+            Value = Url.RouteUrl("ChangeLanguage", new { langid = lang.Id, returnurl }),
+            Selected = lang.Id.Equals(Model.CurrentLanguageId)
+        });
+
+        <div class="language-selector d-block btn-group btn-group-sm float-xs-right pr-1">
+            <button type="button" class="btn dropdown-toggle dropdown-toggle-split" data-toggle="dropdown">
+                <span>
+                    @languages.FirstOrDefault(x => x.Selected).Text
+                </span>
+                <span class="sr-only">Toggle Dropdown</span>
+                <span class="mdi mdi-chevron-down"></span>
+            </button>
+            <div class="dropdown-menu dropdown-menu-right">
+                <ul class="pl-0 mb-0">
+                    @foreach (var item in languages)
+                    {
+                        var className = item.Selected ? "active" : "";
+                        <li class="@className">
+                            <a href="@item.Value">@item.Text</a>
+                        </li>
+                    }
+                </ul>
+            </div>
+        </div>
+
+    }
 }
